# tetris

ConsoleProject/: README.md
ConsoleProject/TetrisGameProject/src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
ConsoleProject/TetrisGameProject/src/controller/: ConsoleController.cpp  ConsoleController.h  GUIController.cpp  GUIController.h  UIController.h
ConsoleProject/TetrisGameProject/src/model/: Board.cpp  Board.h  Brick.cpp  Brick.h  BrickBag.cpp  BrickBag.h  Enums.h  Game.cpp  Game.h  Level.cpp  Level.h  Position.cpp  Position.h  Score.h  ShapesRotation.cpp  ShapesRotation.h  Timer.cpp  Timer.h
ConsoleProject/TetrisGameProject/src/util/: Observable.cpp  Observable.h  Observer.h
ConsoleProject/TetrisGameProject/src/view/: ConsoleView.cpp  ConsoleView.h
ConsoleProject/TetrisGameProject/src/view/gui/: BoardWidget.cpp  BrickWidget.cpp  BrickWidget.h  CustomMessageBox.cpp  CustomMessageBox.h  boardWidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  restartwindow.cpp  restartwindow.h  startwindow.cpp  startwindow.h  startwindow.ui  startwindow.ui.autosave
ConsoleProject/TetrisGameProject/tests/: CMakeLists.txt
ConsoleProject/build-TetrisGameProject-Desktop_Qt_6_3_2_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
ConsoleProject/build-TetrisGameProject-Desktop_Qt_6_3_2_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
ConsoleProject/build-TetrisGameProject-Desktop_Qt_6_3_2_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
ConsoleProject/build-TetrisGameProject-Desktop_Qt_6_3_2_MinGW_64_bit-Debug/src/: cmake_install.cmake
ConsoleProject/build-TetrisGameProject-Desktop_Qt_6_3_2_MinGW_64_bit-Debug/src/TetrisGameProject_autogen/: deps  mocs_compilation.cpp
ConsoleProject/build-TetrisGameProject-Desktop_Qt_6_3_2_MinGW_64_bit-Debug/tests/: cmake_install.cmake
Modelisation/: uml_tetris.mdj
ProjetTetris/ProjectStructure/: CMakeLists.txt.user.9096d51  CMakeLists.txt.user.d64a3fc
ProjetTetris/ProjectStructure/build-src-Desktop_Qt_6_5_2_MinGW_64_bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake
ProjetTetris/ProjectStructure/build-src-Desktop_Qt_6_5_2_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
ProjetTetris/ProjectStructure/src/: Board.cpp  Board.h  Brick.hpp  BrickBag.hpp  CMakeLists.txt  ConsoleController.cpp  ConsoleController.h  ConsoleView.cpp  ConsoleView.h  Game.cpp  Game.h  Level.hpp  Observable.cpp  Score.hpp  ShapesRotation.cpp  ShapesRotation.h  TetrisShapes.cpp  TetrisShapes.h  enum.hpp  main.cpp  position.hpp
ProjetTetris/ProjectStructure/src/console/: ConsoleController.cpp  ConsoleController.h
ProjetTetris/ProjectStructure/src/controller/: ConsoleController.cpp  ConsoleController.h
ProjetTetris/ProjectStructure/src/model/: Board.cpp  Board.h  Brick.h  BrickBag.cpp  BrickBag.h  Enums.h  Game.cpp  Game.h  Level.cpp  Level.h  Position.cpp  Position.h  Score.cpp  ShapesRotation.cpp  ShapesRotation.h
ProjetTetris/ProjectStructure/src/util/: Observable.h
ProjetTetris/ProjectStructure/src/view/: ConsoleView.cpp  ConsoleView.h
ProjetTetris/ProjectStructure/tests/: CMakeLists.txt  testBoard.cpp
ProjetTetris/TetrisGameProject/: CMakeLists.txt
ProjetTetris/TetrisGameProject/src/: CMakeLists.txt
ProjetTetris/TetrisGameProject/src/controller/: ConsoleController.cpp
ProjetTetris/TetrisGameProject/src/model/: Game.h  Position.h
ProjetTetris/TetrisGameProject/src/util/: Observable.cpp
ProjetTetris/build-ProjectStructure-Desktop_Qt_6_3_2_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
ProjetTetris/build-ProjectStructure-Desktop_Qt_6_3_2_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
ProjetTetris/build-ProjectStructure-Desktop_Qt_6_3_2_MinGW_64_bit-Debug/src/: cmake_install.cmake
ProjetTetris/build-ProjectStructure-Desktop_Qt_6_3_2_MinGW_64_bit-Debug/tests/: cmake_install.cmake
ProjetTetris/build-ProjectStructure-Desktop_Qt_6_5_2_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
ProjetTetris/build-ProjectStructure-Desktop_Qt_6_5_2_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
ProjetTetris/build-ProjectStructure-Desktop_Qt_6_5_2_MinGW_64_bit-Debug/src/: cmake_install.cmake
ProjetTetris/build-ProjectStructure-Desktop_Qt_6_5_2_MinGW_64_bit-Debug/tests/: cmake_install.cmake
TetrisProject/: README.md
TetrisProject/TetrisGameProject/: CMakeLists.txt
TetrisProject/TetrisGameProject/src/: CMakeLists.txt  main.cpp
TetrisProject/TetrisGameProject/src/controller/: GUIController.cpp  GUIController.h
TetrisProject/TetrisGameProject/tests/: CMakeLists.txt  testBoard.cpp
(+1875 files in other folders)
